@@ -214,6 +214,7 @@ since 1999.  If I missed your name, let me know.
 * Chris Rothecker
 * John Rouillard
 * Yves Rubin
+* Mattias Ryrlen
 * Jonathan Saggau
 * Karel Salavec
 * Jorge Sanchez
